--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+body{
+    background: white;
+}
+
 main{
     display: flex;
     width: 100%;
@@ -24,14 +28,15 @@ main{
 
 .blockarea{
     display: flex;
-    width: 450px;
-    height: 450px;
+    width: 400px;
+    height: 400px;
     margin-left: auto;
     margin-right: auto;
     flex-wrap: wrap;
     background: rgb(240, 244, 255);
-    border-radius: 20px;
+    border-radius: 15px;
     box-shadow: 0px 3px 0px 1px rgba(0, 0, 0, 0.285);
+    justify-content: center;
 }
 
 .blockitem{
@@ -41,8 +46,8 @@ main{
     padding: 10px;
     background: rgb(142, 156, 191);
     border-radius: 20px;
-    width: 120px;
-    height: 120px;
+    width: 103px;
+    height: 103px;
     margin: 5px;
     align-items: center;
     justify-content: center;
