--- a/style.css
+++ b/style.css
@@ -32,8 +32,8 @@ main{
 
 .blockarea{
     display: flex;
-    width: 400px;
-    height: 400px;
+    width: 350px;
+    height: 350px;
     margin-left: auto;
     margin-right: auto;
     flex-wrap: wrap;
@@ -50,8 +50,8 @@ main{
     padding: 10px;
     background: rgb(142, 156, 191);
     border-radius: 20px;
-    width: 103px;
-    height: 103px;
+    width: 85px;
+    height: 85px;
     margin: 5px;
     align-items: center;
     justify-content: center;
@@ -59,6 +59,10 @@ main{
 
 .blockitem:hover{
     background: rgb(200, 204, 227);
+}
+
+.blockitem:focus{
+    outline: none;
 }
 
 .krest{
@@ -111,4 +115,8 @@ main{
 
 .button:hover{
     background: rgb(170, 187, 235);
+}
+
+.button:focus{
+    outline: none;
 }
