--- a/style.css
+++ b/style.css
@@ -55,6 +55,7 @@ main{
     margin: 5px;
     align-items: center;
     justify-content: center;
+    -webkit-tap-highlight-color: transparent;
 }
 .blockitem:focus{
     outline: none;
